crates/jni/tests/ui/native_method/fail/shorthand_wrong_parameter_type.stderr
warning: unused import: `jint`
 --> tests/ui/native_method/fail/shorthand_wrong_parameter_type.rs:4:16
  |
4 | use jni::sys::{jint, jlong};
  |                ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
  --> tests/ui/native_method/fail/shorthand_wrong_parameter_type.rs:21:30
   |
21 |         fn MyClass::myMethod(value: jint) -> void,
   |                              ^^^^^ expected `i64`, found `i32`
22 |         fn = my_method_impl
   |              -------------- arguments to this function are incorrect
   |
note: function defined here
  --> tests/ui/native_method/fail/shorthand_wrong_parameter_type.rs:11:4
   |
11 | fn my_method_impl<'local>(
   |    ^^^^^^^^^^^^^^
...
14 |     _value: jlong, // Wrong! Should be jint
   |     -------------
help: you can convert an `i32` to an `i64`
   |
21 |         fn MyClass::myMethod(value.into(): jint) -> void,
   |                                   +++++++
